<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/boxOne"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/boxOne"
            android:textAlignment="center"
            android:textSize="@dimen/textsizeboxone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box_two_text"
            style="@style/WhiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/boxTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxOne" />

        <TextView
            android:id="@+id/box_three_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/boxThree"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" />

        <TextView
            android:id="@+id/box_four_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/boxFour"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text" />

        <TextView
            android:id="@+id/box_five_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/boxFive"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="476dp"
            android:text="@string/tap_the_boxes_and_buttons"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/labelText"
            app:layout_constraintTop_toBottomOf="@+id/box_two_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/labelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/labelText"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/infoText"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/redBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/red"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellowBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yellowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/greenButton"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toEndOf="@+id/redBtn"
            app:layout_constraintTop_toBottomOf="@+id/infoText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/green"
            app:layout_constraintBaseline_toBaselineOf="@+id/yellowBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--                app:layout_constraintDimensionRatio="1:1"-->
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOne" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
